style.css
body {
    background-color: #33CCFF;
    color: #FFFFEE;
    font-family: Voltaire, "Istok Web", Sans-serif;
    background-image: url(symbol.jpg);
    background-size: 10%, 10%;
    padding-right: 2%;
}

h2 {
    color: #FEB600;
    font-family: Verdana, Geneva, Serif;
    margin: 3.5%;
    text-align: center;
    font-size: 275%;
    text-shadow: 3px 3px 5px #2f4f4f
}

header {
    background-color: #363377;
    padding: 5px;
    margin: 25px;
    font-size: 200%;
    color: #FFC824;
    border: 3px outset #000000;
    border-radius: 200px;
    text-align: center;
    font-style: oblique;
    text-transform: uppercase;
    background-image: url(header3.jpg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: 100% 100%;
}

.feature {
    color: #FEB600;
    font-weight: bold
}

footer {
    font-style: italic;
    font-size: 75%;
    text-align: center;
    margin-left: 10px;
    margin-right: 10px;
}

ul {
    list-style-image: url(listmark2.png);
    text-align: center;
    font-size: 150%;
    width: 45%;
}

main p a {
    font-weight: bold;
    color: #221FB1;
    font-size: 120%
}

#wrapper {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    background-color: #363377;
    background-image: linear-gradient(to top, #817FB2, #363377);
    border: 5px solid #000000;
    padding-top: 2.5%;
    padding-left: 3%;
    padding-right: 2%
}

p {
    margin-left: 10px;
    margin-right: 10px;
    padding: 5%;
    text-indent: 4em;
    font-size: 150%;
}

.website {
    text-indent: 0em;
}

h1 {
    padding-top: 120px;
    margin-top: 0;
    margin-bottom: 0;
    text-shadow: 3px 3px 5px #666;
    opacity: 0.8;
}

#column {
    padding-bottom: 4.6em;
}

#column a img {
    margin-left: 10px;
    float: right;
    width: 50%;
    height: 100%;
}

figure {
    width: 580px;
    border: 10px solid #000000;
    padding: 5px;
}

figcaption {
    text-align: center;
    font-family: fantasy, Papyrus, Sans-serif;
    color: #000000;
    font-size: 150%;
}
@media only screen and (max-width: 64em) {
    header {font-size: 125%; }
    h1 {padding-top: 80px;}
    h2 {font-size: 200%;}
    p {font-size: 125%;}
    ul {font-size: 125%;}
    
}
@media only screen and (max-width: 37.5em) {
    body {background-image: none; background-color: #817fb2; padding: 0;}
    #wrapper {width: 100%; border-style: none; padding: 0;}
    figure {display: none;}
    #column a img {display: none;}
    ul {width: 90%}
    header {background-image: none; border-style: none; background-color: #31304F; border-radius: 0px; color: #ffd763;}
}

